gitops/apps/solidtime/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solidtime
  labels: &default
    app: solidtime
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *default
  template:
    metadata:
      labels: *default
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: app
          image: solidtime/solidtime:latest
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: app-storage
              mountPath: /var/www/html/storage
        - name: scheduler
          image: solidtime/solidtime:latest
          volumeMounts:
            - name: app-storage
              mountPath: /var/www/html/storage
        - name: queue
          image: solidtime/solidtime:latest
          volumeMounts:
            - name: app-storage
              mountPath: /var/www/html/storage
        - name: gotenberg
          image: gotenberg/gotenberg:8
          ports:
            - name: gotenberg
              containerPort: 3000
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: solidtime-app-storage
