gitops/apps/solidtime/queue-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solidtime-queue
  labels: &default
    app: solidtime-queue
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *default
  template:
    metadata:
      labels: *default
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: queue
          image: solidtime/solidtime:latest
          volumeMounts:
            - name: app-storage
              mountPath: /var/www/html/storage
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: solidtime-app-storage
