gitops/apps/solidtime/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solidtime-app
spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app: solidtime-app
