gitops/apps/solidtime/gotenberg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solidtime-gotenberg
spec:
  ports:
    - name: gotenberg
      port: 3000
      targetPort: gotenberg
  selector:
    app: solidtime-gotenberg
