gitops/apps/solidtime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solidtime
spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app: solidtime
