gitops/apps/solidtime/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: solidtime
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - solidtime.bealv.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: solidtime
          port: 8000
